Bug 1637564 - Conditionally compile reference-types global initializers. r=lth

We rejected ref.null/func when reference-types is disabled because we'll never
get a reference-type value type. This commit moves this further to be
conditionally compiled so we can use conditionally compiled reference-types
code.

Differential Revision: https://phabricator.services.mozilla.com/D75129